# koap-python

./: .gitignore  .gitmodules  Makefile  README.md  index.html  koap-go-generator  pyproject.toml  test.py  test_epa_adhoc_authz.html  test_epa_authz_list.html  test_epa_authz_state.html  test_epa_find_documents.html  test_epa_find_folders.html  test_epa_get_folders.html  test_external_authenticate.html  test_home_community.html  test_read_vsd.html
.devcontainer/: Dockerfile  devcontainer.json
koap/: cetp.py  client.py  config.py  debug.py  service_directory.py  util.py
koap-sample/: README.md  pyproject.toml  requirements.txt  sample.py
koap/facade/: external_authenticate.py  model.py
koap/facade/epa/: builder.py  epa_facade.py  epa_record_facade.py
koap/facade/vsdm/: vsdm_facade.py
koap/gogenerator/: generator.py
tests/: NFD_sample_1.4.xml  sig.NFD_sample_1.4.xml  test_builder.py  test_cetp.py  test_client.py  test_sign_document.py
tests/facade/: test_external_authenticate.py
tests/facade/epa/: message-working.xml  message.xml  provide-working.xop  provide.xop  provide.xop.template  test_epa_adhoc_authz.py  test_epa_authz_list.py  test_epa_authz_state.py  test_epa_find_documents.py  test_epa_find_folders.py  test_epa_get_folders.py  test_manual_request.py
tests/facade/nfd/: test_read_nfd.py
tests/facade/vsdm/: test_read_vsd.py
