[tool.poetry]
name = "koap"
version = "0.1.0"
description = ""
authors = ["Sergej Suskov <git@spilikin.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<4"
requests = "^2.28.1"
pydantic = "^1.10.2"
rich = "^12.5.1"
zeep = "^4.1.0"
# latest version to support the brainpool curves (waiting for official release)
jwcrypto = { git = "https://github.com/latchset/jwcrypto.git", branch = "main"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pytest = "^7.3"