[tool.poetry]
name = "koap"
version = "0.2.0"
description = ""
authors = ["Sergej Suskov <git@spilikin.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<4"
requests = "^2.28.1"
pydantic = "^1.10.2"
rich = "^12.5.1"
zeep = "^4.1.0"
jwcrypto = "^1.5.0"
xmltodict = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pytest = "^7.3"